fix: remove body's top margin on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -186,9 +186,10 @@ tr:last-child td {
 }
 
 /* Media Queries */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   body,
   .container {
+    margin: 0 auto;
     padding: 0;
   }
 
